Replacing model files
Text edits.

--- a/02_NYPD_LR.ipynb
+++ b/02_NYPD_LR.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jeesuk/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -190,11 +181,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['OFFICER_EXPLAINED_STOP_FLAG', 'OFFICER_IN_UNIFORM_FLAG',\n",
-      "       'ID_CARD_IDENTIFIES_OFFICER_FLAG', 'VERBAL_IDENTIFIES_OFFICER_FLAG',\n",
-      "       'FRISKED_FLAG', 'SEARCHED_FLAG', 'OTHER_CONTRABAND_FLAG',\n",
-      "       'BACKGROUND_VIOLENT_CRIME', 'BACKGROUND_SUSPECT_KNOWN_CARRY_WPN',\n",
-      "       'SUSPECTS_ACTIONS_CASING_FLAG',\n",
+      "Index(['OFFICER_EXPLAINED_STOP_FLAG', 'ID_CARD_IDENTIFIES_OFFICER_FLAG',\n",
+      "       'VERBAL_IDENTIFIES_OFFICER_FLAG', 'FRISKED_FLAG', 'SEARCHED_FLAG',\n",
+      "       'OTHER_CONTRABAND_FLAG', 'BACKGROUND_VIOLENT_CRIME',\n",
+      "       'BACKGROUND_SUSPECT_KNOWN_CARRY_WPN', 'SUSPECTS_ACTIONS_CASING_FLAG',\n",
       "       'SUSPECTS_ACTIONS_CONCEALED_POSSESSION_WEAPON_FLAG',\n",
       "       'SUSPECTS_ACTIONS_DRUG_TRANSACTIONS_FLAG',\n",
       "       'SUSPECTS_ACTIONS_IDENTIFY_CRIME_PATTERN_FLAG',\n",
@@ -202,17 +192,16 @@
       "       'SEARCH_BASIS_INCIDENTAL_TO_ARREST_FLAG', 'SEARCH_BASIS_OTHER_FLAG',\n",
       "       'SEARCH_BASIS_OUTLINE_FLAG', 'weapon', 'endangerment', 'theft',\n",
       "       'property_damage', 'trespass', 'auto', 'sexual_assault', 'drugs',\n",
-      "       'robbery', 'other', 'weapon_found', 'aggressive_force',\n",
-      "       'demeanor_nervous', 'demeanor_antagonistic', 'demeanor_tired',\n",
-      "       'demeanor_upset', 'demeanor_inebriated', 'demeanor_fled',\n",
-      "       'appearance_bag', 'appearance_facial_hair', 'appearance_scars',\n",
-      "       'appearance_braids', 'appearance_hat', 'appearance_tattoo',\n",
-      "       'appearance_mask', 'appearance_piercing', 'appearance_unusual',\n",
-      "       'appearance_menacing', 'appearance_bandana', 'appearance_wounds',\n",
-      "       'STOP_WAS_INITIATED_Based on C/W on Scene', 'ISSUING_OFFICER_RANK_DT1',\n",
-      "       'ISSUING_OFFICER_RANK_DT3', 'ISSUING_OFFICER_RANK_DTS',\n",
-      "       'ISSUING_OFFICER_RANK_LSA', 'ISSUING_OFFICER_RANK_LT',\n",
-      "       'ISSUING_OFFICER_RANK_SDS', 'ISSUING_OFFICER_RANK_SGT',\n",
+      "       'other', 'weapon_found', 'aggressive_force', 'demeanor_nervous',\n",
+      "       'demeanor_tired', 'demeanor_upset', 'demeanor_inebriated',\n",
+      "       'demeanor_fled', 'appearance_bag', 'appearance_facial_hair',\n",
+      "       'appearance_scars', 'appearance_braids', 'appearance_hat',\n",
+      "       'appearance_tattoo', 'appearance_mask', 'appearance_piercing',\n",
+      "       'appearance_unusual', 'appearance_menacing', 'appearance_bandana',\n",
+      "       'appearance_wounds', 'STOP_WAS_INITIATED_Based on C/W on Scene',\n",
+      "       'ISSUING_OFFICER_RANK_DT1', 'ISSUING_OFFICER_RANK_DT3',\n",
+      "       'ISSUING_OFFICER_RANK_DTS', 'ISSUING_OFFICER_RANK_LSA',\n",
+      "       'ISSUING_OFFICER_RANK_LT', 'ISSUING_OFFICER_RANK_SGT',\n",
       "       'ISSUING_OFFICER_RANK_SSA', 'SUPERVISING_OFFICER_RANK_CPT',\n",
       "       'SUPERVISING_OFFICER_RANK_LCD', 'SUPERVISING_OFFICER_RANK_LSA',\n",
       "       'SUPERVISING_OFFICER_RANK_POF', 'SUPERVISING_OFFICER_RANK_SDS',\n",
@@ -239,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "89"
+       "85"
       ]
      },
      "execution_count": 6,
@@ -268,14 +257,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.87641607 0.90937178 0.91246138 0.89392379 0.88259526 0.88453608\n",
-      " 0.87731959 0.87113402 0.86907216 0.87731959]\n"
+      "[0.87641607 0.91040165 0.91143151 0.89392379 0.88465499 0.88453608\n",
+      " 0.87731959 0.87216495 0.87113402 0.87731959]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8854149723422553"
+       "0.8859302239162516"
       ]
      },
      "execution_count": 7,
@@ -329,9 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score: 89.0%\n",
-      "False Negatives: 30.0%\n",
-      "False Positives: 3.6%\n"
+      "Accuracy Score: 88.9%\n"
      ]
     }
    ],
@@ -339,21 +326,21 @@
     "def compute_error(actuals, predictions):\n",
     "    return metrics.accuracy_score(actuals, predictions)\n",
     "\n",
-    "def compute_false_negatives(actuals, predictions):\n",
-    "    df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
-    "    return df[(df[\"actuals\"] == 1) & (df[\"predictions\"] == 0)].shape[0] / (df[(df[\"actuals\"] == 1)].shape[0])\n",
+    "# def compute_false_negatives(actuals, predictions):\n",
+    "#     df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
+    "#     return df[(df[\"actuals\"] == 1) & (df[\"predictions\"] == 0)].shape[0] / (df[(df[\"actuals\"] == 1)].shape[0])\n",
     "\n",
-    "def compute_false_positives(actuals, predictions):\n",
-    "    df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
-    "    return df[(df[\"actuals\"] == 0) & (df[\"predictions\"] == 1)].shape[0] / (df[(df[\"actuals\"] == 0)].shape[0])\n",
+    "# def compute_false_positives(actuals, predictions):\n",
+    "#     df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
+    "#     return df[(df[\"actuals\"] == 0) & (df[\"predictions\"] == 1)].shape[0] / (df[(df[\"actuals\"] == 0)].shape[0])\n",
     "\n",
     "\n",
     "acc = compute_error(actuals, holdout_predictions)\n",
-    "fn = compute_false_negatives(actuals, holdout_predictions)\n",
-    "fp = compute_false_positives(actuals, holdout_predictions)\n",
+    "# fn = compute_false_negatives(actuals, holdout_predictions)\n",
+    "# fp = compute_false_positives(actuals, holdout_predictions)\n",
     "print(\"Accuracy Score: {0:.1%}\".format(acc))\n",
-    "print(\"False Negatives: {0:.1%}\".format(fn))\n",
-    "print(\"False Positives: {0:.1%}\".format(fp))"
+    "# print(\"False Negatives: {0:.1%}\".format(fn))\n",
+    "# print(\"False Positives: {0:.1%}\".format(fp))"
    ]
   },
   {
@@ -361,9 +348,9 @@
    "metadata": {},
    "source": [
     "# CONCLUSION\n",
-    "Seeing ~89% accuracy on both the train and holdout datasets is highly encouraging. Although a false negative rate of 30% suggests room for improvement, a sub-4% false positive rate implies that few wrongful arrests (from the perspective of the NYPD) would be made.\n",
+    "Seeing ~89% accuracy on both the train and holdout datasets is highly encouraging. Let's see if other models can improve on this.\n",
     "\n",
-    "In order to boost accuracy and minimize the false negative and false positive rates, I had to remove the `stop_time_period` features from the selection from which optimized features were chosen."
+    "In order to boost accuracy, I had to remove the `stop_time_period` features from the selection from which optimized features were chosen."
    ]
   }
  ],
@@ -383,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
