--- a/03_NYPD_KNN.ipynb
+++ b/03_NYPD_KNN.ipynb
@@ -159,8 +159,8 @@
      "data": {
       "text/plain": [
        "KNeighborsClassifier(algorithm='brute', leaf_size=30, metric='minkowski',\n",
-       "           metric_params=None, n_jobs=1, n_neighbors=9, p=1,\n",
-       "           weights='distance')"
+       "                     metric_params=None, n_jobs=None, n_neighbors=9, p=1,\n",
+       "                     weights='distance')"
       ]
      },
      "execution_count": 5,
@@ -219,9 +219,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score: 82.9%\n",
-      "False Negatives: 55.6%\n",
-      "False Positives: 2.2%\n"
+      "Accuracy Score: 82.9%\n"
      ]
     }
    ],
@@ -229,21 +227,21 @@
     "def compute_error(actuals, predictions):\n",
     "    return metrics.accuracy_score(actuals, predictions)\n",
     "\n",
-    "def compute_false_negatives(actuals, predictions):\n",
-    "    df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
-    "    return df[(df[\"actuals\"] == 1) & (df[\"predictions\"] == 0)].shape[0] / (df[(df[\"actuals\"] == 1)].shape[0])\n",
+    "# def compute_false_negatives(actuals, predictions):\n",
+    "#     df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
+    "#     return df[(df[\"actuals\"] == 1) & (df[\"predictions\"] == 0)].shape[0] / (df[(df[\"actuals\"] == 1)].shape[0])\n",
     "\n",
-    "def compute_false_positives(actuals, predictions):\n",
-    "    df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
-    "    return df[(df[\"actuals\"] == 0) & (df[\"predictions\"] == 1)].shape[0] / (df[(df[\"actuals\"] == 0)].shape[0])\n",
+    "# def compute_false_positives(actuals, predictions):\n",
+    "#     df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
+    "#     return df[(df[\"actuals\"] == 0) & (df[\"predictions\"] == 1)].shape[0] / (df[(df[\"actuals\"] == 0)].shape[0])\n",
     "\n",
     "\n",
     "acc = compute_error(actuals, holdout_predictions)\n",
-    "fn = compute_false_negatives(actuals, holdout_predictions)\n",
-    "fp = compute_false_positives(actuals, holdout_predictions)\n",
+    "# fn = compute_false_negatives(actuals, holdout_predictions)\n",
+    "# fp = compute_false_positives(actuals, holdout_predictions)\n",
     "print(\"Accuracy Score: {0:.1%}\".format(acc))\n",
-    "print(\"False Negatives: {0:.1%}\".format(fn))\n",
-    "print(\"False Positives: {0:.1%}\".format(fp))"
+    "# print(\"False Negatives: {0:.1%}\".format(fn))\n",
+    "# print(\"False Positives: {0:.1%}\".format(fp))"
    ]
   },
   {
@@ -251,19 +249,10 @@
    "metadata": {},
    "source": [
     "# CONCLUSION\n",
-    "The K-nearest neighbors method yielded substantial performance drops in accuracy and the false negative rate, but it did manage to lower the false positive rate to 2.2%.\n",
-    "\n",
-    "Increasing the number of neighbors can shave off more from the false positive rate to the low 1%s, but the gains in accuracy are slim and the false negative rate also increases as a result.\n",
+    "The K-nearest neighbors method yielded substantial performance drops in accuracy, compared to the logistic regression model.\n",
     "\n",
     "Also worth noting is that the inclusion of the `stop_time_period` features improves the accuracy and error metrics of the model."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -282,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
