--- a/04_NYPD_RF.ipynb
+++ b/04_NYPD_RF.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jeesuk/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -168,11 +159,12 @@
      "data": {
       "text/plain": [
        "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
-       "            max_depth=10, max_features='sqrt', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=3,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-       "            oob_score=False, random_state=1, verbose=0, warm_start=False)"
+       "                       max_depth=10, max_features='sqrt', max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=3,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+       "                       n_jobs=None, oob_score=False, random_state=1, verbose=0,\n",
+       "                       warm_start=False)"
       ]
      },
      "execution_count": 5,
@@ -233,9 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score: 89.8%\n",
-      "False Negatives: 29.7%\n",
-      "False Positives: 2.6%\n"
+      "Accuracy Score: 89.8%\n"
      ]
     }
    ],
@@ -243,21 +233,21 @@
     "def compute_error(actuals, predictions):\n",
     "    return metrics.accuracy_score(actuals, predictions)\n",
     "\n",
-    "def compute_false_negatives(actuals, predictions):\n",
-    "    df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
-    "    return df[(df[\"actuals\"] == 1) & (df[\"predictions\"] == 0)].shape[0] / (df[(df[\"actuals\"] == 1)].shape[0])\n",
+    "# def compute_false_negatives(actuals, predictions):\n",
+    "#     df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
+    "#     return df[(df[\"actuals\"] == 1) & (df[\"predictions\"] == 0)].shape[0] / (df[(df[\"actuals\"] == 1)].shape[0])\n",
     "\n",
-    "def compute_false_positives(actuals, predictions):\n",
-    "    df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
-    "    return df[(df[\"actuals\"] == 0) & (df[\"predictions\"] == 1)].shape[0] / (df[(df[\"actuals\"] == 0)].shape[0])\n",
+    "# def compute_false_positives(actuals, predictions):\n",
+    "#     df = pd.DataFrame({\"predictions\": predictions, \"actuals\": actuals})\n",
+    "#     return df[(df[\"actuals\"] == 0) & (df[\"predictions\"] == 1)].shape[0] / (df[(df[\"actuals\"] == 0)].shape[0])\n",
     "\n",
     "\n",
     "acc = compute_error(actuals, holdout_predictions)\n",
-    "fn = compute_false_negatives(actuals, holdout_predictions)\n",
-    "fp = compute_false_positives(actuals, holdout_predictions)\n",
+    "# fn = compute_false_negatives(actuals, holdout_predictions)\n",
+    "# fp = compute_false_positives(actuals, holdout_predictions)\n",
     "print(\"Accuracy Score: {0:.1%}\".format(acc))\n",
-    "print(\"False Negatives: {0:.1%}\".format(fn))\n",
-    "print(\"False Positives: {0:.1%}\".format(fp))"
+    "# print(\"False Negatives: {0:.1%}\".format(fn))\n",
+    "# print(\"False Positives: {0:.1%}\".format(fp))"
    ]
   },
   {
@@ -265,9 +255,9 @@
    "metadata": {},
    "source": [
     "# CONCLUSION\n",
-    "The random forest model yields ~90% accuracy, while also improving on the false negative and false positive rates of the logistic regression model.\n",
+    "The random forest model yields ~90% accuracy, a slight improvement from the logistic regression model.\n",
     "\n",
-    "As with the K-nearest neighbors model, the inclusion of the `stop_time_period` features also improves the accuracy and error metrics of the model."
+    "As with the K-nearest neighbors model, the inclusion of the `stop_time_period` feature improves accuracy."
    ]
   }
  ],
@@ -287,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
